--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -7,8 +7,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    matrix:
-      python-version: [3.12, 3.8, 3.9]
+
+    strategy:
+      matrix:
+        python-version: [3.12, 3.8, 3.9]
     
     steps:
     - name: Checkout Repository
