--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -1,4 +1,4 @@
-name: Python CI
+name: Python Matrix Operations
 
 on:
   workflow_dispatch:
@@ -6,22 +6,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-
     strategy:
       matrix:
-        python-version: [3.12, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9]
     
     steps:
-    - name: Checkout Repository
+    - name: Checkout repository
       uses: actions/checkout@v2
       
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{matrix.python-version}}
-
-    - name: Run tests
-      run: |
-        python try.py
-
+        python-version: ${{ matrix.python-version }}
+    
+    - name: Install dependencies
+      run: pip install numpy 
+      
+    - name: Run Python script
+      run: python matrix_operations.py
