--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.12, 3.9, 3.8]
     
     steps:
     - name: Checkout repository
@@ -19,8 +19,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
-    - name: Install dependencies
-      run: pip install numpy 
+
       
     - name: Run Python script
       run: python file.py
