--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         python-version: [3.12, 3.9, 3.8]
