--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        python-version: [3.12, 3.9, 3.8]
+        python-version: [3.9]
     
     steps:
     - name: Checkout repository
