--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Run Python script
-      run: python file2.py
+      run: python file.py
 
 
   secrets-example:
